--- a/estilos/style.css
+++ b/estilos/style.css
@@ -15,3 +15,25 @@ main {
     padding: 10px;
     box-shadow: 3px 3px 5px black;
 }
+
+h1 {
+    font-size: 2em;
+    color: rgb(177, 119, 231);
+}
+h2 {
+    font-size: 2em;
+    color: rgb(177, 119, 231);
+}
+img.lado {
+    float: right;
+
+}
+a {
+    text-decoration: none;
+    font-weight: bold;
+    color: rgb(177, 119, 231);
+}
+a :hover {
+    text-decoration: underline;
+    color: rgb(177, 119, 231);
+}
